[feat] prune within / outside range